# Haskell-Event-Source-Library

./: event-source.cabal  stack.yaml
src/Event/: Source.hs
