Name: event-source
Version: 1.0.0
Cabal-Version: >=1.8.0.2
Build-Type: Simple
License: BSD3
License-File: LICENSE
Copyright: 2016 Gabriel Gonzalez
Author: Gabriel Gonzalez
Maintainer: Gabriel439@gmail.com
Bug-Reports: https://github.com/Gabriel439/Haskell-Event-Source-Library/issues
Synopsis: Event sourcing library
Description: Event sourcing library
Category: Control
Source-Repository head
    Type: git
    Location: https://github.com/Gabriel439/Haskell-Event-Source-Library

Library
    HS-Source-Dirs: src
    Build-Depends:
        base         >= 4.5     && < 5   ,
        bytestring                 < 0.11,
        cereal                     < 0.6 ,
        comonad      >= 4.0     && < 6   ,
        containers                 < 0.6 ,
        directory                  < 1.3 ,
        managed                    < 1.1 ,
        pipes        >= 4.0     && < 4.2 ,
        profunctors                < 5.3 ,
        transformers >= 0.2.0.0 && < 0.6
    Exposed-Modules: Event.Source
    GHC-Options: -O2 -Wall
